# virtual-testset-vpac

./: .gitignore  .gitmodules  LICENSE  README.md  run-e2e-tests.sh  test-integration.sh
.github/: FOLDER_STRUCTURE.md  RESTRUCTURE_COMPLETE.md
.github/workflows/: ci.yml
backend/: CMakeLists.txt  CMakePresets.json  CTestTestfile.cmake  Dockerfile  Makefile  README.md  docker-compose-macvlan.yml  docker-compose-sriov.yml  docker-compose.yml  test_api.sh  test_minimal.cpp  test_websocket.sh
backend/scripts/: build_macos.sh  cyclictest_wrap.sh  disable_gro_lro.sh  monitor.sh  pin_irqs.sh  run_macos_no_net.sh  status.sh  verify_rt_env.sh  watch-logs.sh
backend/src/analyzer/: CMakeLists.txt  Makefile
backend/src/analyzer/include/: analyzer_engine.hpp
backend/src/analyzer/src/: analyzer_engine.cpp
backend/src/api/: CMakeLists.txt  Makefile
backend/src/api/include/: http_server.hpp  tcp_server.hpp  ws_server.hpp
backend/src/api/src/: http_server.cpp  tcp_server.cpp  ws_server.cpp
backend/src/core/: CMakeLists.txt  Makefile
backend/src/core/include/: global_flags.hpp  sv_publisher_instance.hpp  sv_publisher_manager.hpp
backend/src/core/src/: global_flags.cpp  sv_publisher_instance.cpp  sv_publisher_manager.cpp
backend/src/goose/: CMakeLists.txt  Makefile
backend/src/goose/include/: goose_receive.hpp
backend/src/io/: CMakeLists.txt  Makefile
backend/src/io/include/: comtrade_parser.hpp
backend/src/io/src/: comtrade_parser.cpp
backend/src/main/: CMakeLists.txt  Makefile
backend/src/main/include/: main.hpp
backend/src/main/src/: main.cpp
backend/src/platform/: CMakeLists.txt  Makefile
backend/src/platform/include/: bpf_macos.hpp  compat.hpp  npcap_windows.hpp  raw_socket_platform.hpp  raw_socket_stub.hpp
backend/src/platform/src/: bpf_macos.cpp  npcap_windows.cpp
backend/src/protocols/: CMakeLists.txt  Makefile
backend/src/protocols/include/: BER_Encoding.hpp  Ethernet.hpp  Goose.hpp  IEC61850_Types.hpp  Protocols.hpp  SampledValue.hpp  Virtual_LAN.hpp
backend/src/sampledValue/: CMakeLists.txt  Makefile
backend/src/sampledValue/include/: sv_sender.hpp
backend/src/sequence/: CMakeLists.txt  Makefile
backend/src/sequence/include/: sequence_engine.hpp
backend/src/sequence/src/: sequence_engine.cpp
backend/src/sniffer/: CMakeLists.txt  Makefile
backend/src/sniffer/include/: sniffer.hpp  trip_rule_evaluator.hpp
backend/src/sniffer/src/: sniffer.cpp  trip_rule_evaluator.cpp
backend/src/synth/: CMakeLists.txt  Makefile
backend/src/synth/include/: phasor_synth.hpp
backend/src/synth/src/: phasor_synth.cpp
backend/src/testers/: CMakeLists.txt  Makefile
backend/src/testers/include/: differential_tester.hpp  distance_tester.hpp  impedance_calculator.hpp  overcurrent_tester.hpp  ramping_tester.hpp
backend/src/testers/src/: differential_tester.cpp  distance_tester.cpp  impedance_calculator.cpp  overcurrent_tester.cpp  ramping_tester.cpp
backend/src/tests/: CMakeLists.txt  Makefile
backend/src/tests/include/: tests.hpp  transient.hpp
backend/src/tests/src/: tests.cpp  transient.cpp
backend/src/tools/: CMakeLists.txt  Makefile
backend/src/tools/include/: general_definition.hpp  logger.hpp  metrics.hpp  packet_ring.hpp  raw_socket.hpp  rt_utils.hpp  signal_processing.hpp  thread_pool.hpp  timers.hpp
backend/src/tools/src/: logger.cpp  metrics.cpp  packet_ring.cpp  rt_utils.cpp
backend/tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  TASK_12_TESTING.md  TEST_SUMMARY.md  network_integration_test.cpp  test_ber_encoding.cpp  test_comtrade_parser.cpp  test_impedance_calculator.cpp  test_mac_parser.cpp  test_main.cpp  test_overcurrent_tester.cpp  test_ramping_tester.cpp  test_sequence_engine.cpp  test_smpCnt_wrap.cpp  test_threadpool.cpp  test_trip_rule_evaluator.cpp  test_vlan.cpp  vts_tests[1]_include.cmake
docker/: Dockerfile.backend  Dockerfile.backend.simple  Dockerfile.backend.windows  Dockerfile.frontend  README.md  docker-compose.macos-macvlan.yml  docker-compose.macos.yml  docker-compose.yml  nginx.conf
docs/: docs-manifest.json
docs/00-overview/: getting-started.md
docs/01-architecture/: backend-architecture.md  frontend-architecture.md  system-overview.md
docs/02-setup/: docker-macos-guide.md  macos-bpf-websocket.md  macos-network-setup.md  macos-networking-alt.md  native-build-guide.md
docs/03-backend/: comtrade-parser.md  integration-status.md  logs-and-monitoring.md  monitoring-setup.md
docs/04-frontend/: backend-integration.md  dashboard-integration.md  pages.md
docs/05-cross-platform/: overview.md  quick-reference.md
docs/06-tests/: e2e-verification.md  tests-quick-start.md  unit-tests.md
frontend/: .env.example  ENV_CONFIG.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/__tests__/: setup.ts
frontend/src/components/: ChannelMapper.tsx  ComtradeUploader.tsx  HarmonicsEditor.tsx  PhasorControl.tsx  Sidebar.tsx  StreamCard.tsx  StreamConfigDialog.tsx  Topbar.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/layouts/: AppLayout.tsx
frontend/src/lib/: api.ts  types.ts  ws.ts
frontend/src/pages/: AnalyzerPage.tsx  BackendLogsPage.tsx  ComtradePage.tsx  ComtradePlaybackPage.tsx  Dashboard.tsx  DifferentialTestPage.tsx  DistanceTestPage.tsx  GoosePage.tsx  ImpedancePage.tsx  ManualInjectionPage.tsx  OvercurrentTestPage.tsx  RampingTestPage.tsx  SequencerPage.tsx  SettingsPage.tsx  StreamsPage.tsx
frontend/src/stores/: useAnalyzerStore.ts  useGooseStore.ts  useSequencerStore.ts  useSettingsStore.ts  useStreamStore.ts  useTestStore.ts
schemas/: differential-test.schema.json  distance-test.schema.json  goose-config.schema.json  harmonics-update.schema.json  impedance-injection.schema.json  overcurrent-test.schema.json  phasor-update.schema.json  ramp-test.schema.json  sequence-run.schema.json  stream-config.schema.json
scripts/: create-macos-macvlan.sh  run-backend.sh
tests/e2e/: README.md  package-lock.json  package.json  playwright.config.ts
tests/e2e/tests/: 01-streams.spec.ts  (+5 more)
(+5 files in other folders)
